--- a/ZipR/ZipR/Base.lproj/LaunchScreen.storyboard
+++ b/ZipR/ZipR/Base.lproj/LaunchScreen.storyboard
@@ -15,15 +15,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6u4-cd-mzE">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="zipr_launch_updated" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6u4-cd-mzE">
+                                <rect key="frame" x="40" y="74" width="334" height="788"/>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6u4-cd-mzE" secondAttribute="trailing" id="4wb-79-YFl"/>
-                            <constraint firstItem="6u4-cd-mzE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="5cq-vk-JGx"/>
-                            <constraint firstItem="6u4-cd-mzE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="HCI-ht-VOp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6u4-cd-mzE" secondAttribute="trailing" constant="40" id="4wb-79-YFl"/>
+                            <constraint firstItem="6u4-cd-mzE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="5cq-vk-JGx"/>
+                            <constraint firstItem="6u4-cd-mzE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="HCI-ht-VOp"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6u4-cd-mzE" secondAttribute="bottom" id="Ozh-Ow-JiY"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -34,4 +35,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="zipr_launch_updated" width="860" height="395"/>
+    </resources>
 </document>
